; ModuleID = '/home/carl/AnghaBench/scrcpy/app/src/extr_screen.c_screen_resize_to_pixel_perfect.c'
source_filename = "/home/carl/AnghaBench/scrcpy/app/src/extr_screen.c_screen_resize_to_pixel_perfect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.screen = type { %struct.TYPE_2__, i32, i32 }
%struct.TYPE_2__ = type { i32, i32 }

@.str = private unnamed_addr constant [25 x i8] c"Resized to pixel-perfect\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @screen_resize_to_pixel_perfect(%struct.screen* %0) #0 {
  %2 = alloca %struct.screen*, align 8
  store %struct.screen* %0, %struct.screen** %2, align 8
  %3 = load %struct.screen*, %struct.screen** %2, align 8
  %4 = getelementptr inbounds %struct.screen, %struct.screen* %3, i32 0, i32 2
  %5 = load i32, i32* %4, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %21, label %7

7:                                                ; preds = %1
  %8 = load %struct.screen*, %struct.screen** %2, align 8
  %9 = getelementptr inbounds %struct.screen, %struct.screen* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.screen*, %struct.screen** %2, align 8
  %12 = getelementptr inbounds %struct.screen, %struct.screen* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.screen*, %struct.screen** %2, align 8
  %16 = getelementptr inbounds %struct.screen, %struct.screen* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @SDL_SetWindowSize(i32 %10, i32 %14, i32 %18)
  %20 = call i32 @LOGD(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0))
  br label %21

21:                                               ; preds = %7, %1
  ret void
}

declare dso_local i32 @SDL_SetWindowSize(i32, i32, i32) #1

declare dso_local i32 @LOGD(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
